--- a/clips/movies/manifest.json
+++ b/clips/movies/manifest.json
@@ -22,6 +22,11 @@
             "name": "illbeback",
             "help": "He'll be back",
             "path": "illbeback.mp3"
+        },
+        {
+            "name": "witness",
+            "help": "WITNESS ME",
+            "path": "witnessme.mp3"
         }
     ]
 }
