--- a/clips/arrested-development/manifest.json
+++ b/clips/arrested-development/manifest.json
@@ -11,7 +11,7 @@
         {
             "name": "isnt",
             "help": "It definitely isn't.",
-            "path": "itisnt.mp3"
+            "path": "it-isnt.mp3"
         }
     ]
 }
