--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "version"                       : "0.0.1",
+    "version"                       : "0.0.2",
     "admins"                        : ["Username#1234"],
     "activation_string"             : "=",
     "description"                   : "This is a description, I should really think of something good to put here.",
     "channel_timeout"               : 900,
-    "channel_timeout_clip_paths"    : ["clips/movies/illbeback.mp3"],
+    "channel_timeout_clip_paths"    : ["clips/movies/ill-be-back.mp3"],
     "skip_votes"                    : 3,
     "skip_percentage"               : 33,
 
