--- a/clips/internet/manifest.json
+++ b/clips/internet/manifest.json
@@ -4,55 +4,139 @@
     "description"   : "All the garbage you know and love.",
     "clips": [
         {
-            "name": "consequences",
-            "help": "When will you learn‽",
-            "path": "consequences.mp3"
+            "name":     "consequences",
+            "help":     "When will you learn‽",
+            "path":     "consequences.mp3"
         },
         {
-            "name": "anime",
-            "help": "Righteous fury!",
-            "path": "anime.mp3"
+            "name":     "anime",
+            "help":     "Righteous fury!",
+            "path":     "anime.mp3"
         },
         {
-            "name": "curb",
-            "help": "Oh geez there Larry.",
-            "path": "curb-your-enthusiasm.mp3"
+            "name":     "curb",
+            "help":     "Oh geez there Larry.",
+            "path":     "curb-your-enthusiasm.mp3"
         },
         {
-            "name": "kermit",
-            "help": "RIP little green friend.",
-            "path": "kermit-suicide.mp3"
+            "name":     "kermit",
+            "help":     "RIP little green friend.",
+            "path":     "kermit-suicide.mp3"
         },
         {
-            "name": "dejavu",
-            "help": "Running in the 90s.",
-            "path": "deja-vu.mp3"
+            "name":     "dejavu",
+            "aliases":  ["initiald", "drifting"],
+            "help":     "Running in the 90s.",
+            "path":     "deja-vu.mp3"
         },
         {
-            "name": "no",
-            "help": "DO NOT WAAAANT!",
-            "path": "nooo.mp3"
+            "name":     "didimissit",
+            "help":     "It's all over now.",
+            "path":     "did-i-miss-it.mp3"
         },
         {
-            "name": "didimissit",
-            "help": "It's all over now.",
-            "path": "did-i-miss-it.mp3"
+            "name":     "favre",
+            "help":     "They're gonna kick some alien butt!",
+            "path":     "help-brett-favre.mp3"
         },
         {
-            "name": "favre",
-            "help": "They're gonna kick some alien butt!",
-            "path": "help-brett-favre.mp3"
-        }
-        ,
-        {
-            "name": "favre",
-            "help": "They're gonna kick some alien butt!",
-            "path": "help-brett-favre.mp3"
+            "name":     "chillfully",
+            "help":     "It's going well.",
+            "path":     "its-going-chillfully.mp3"
         },
         {
-            "name": "chillfully",
-            "help": "It's going well.",
-            "path": "its-going-chillfully.mp3"
+            "name":     "people",
+            "help":     "Can't trust 'em.",
+            "path":     "people.mp3"
+        },
+        {
+            "name":     "no",
+            "help":     "It just doesn't add up.",
+            "path":     "no.mp3"
+        },
+        {
+            "name":     "eternity",
+            "help":     "One eternity later.",
+            "path":     "one-eternity-later.mp3"
+        },
+        {
+            "name":     "noice",
+            "aliases":  ["nice"],
+            "help":     "Noice.",
+            "path":     "noice.mp3"
+        },
+        {
+            "name":     "ohshit",
+            "aliases":  ["nudetayne"],
+            "help":     "This is not suitable for work.",
+            "path":     "oh-shit-im-okay.mp3"
+        },
+        {
+            "name":     "goofin",
+            "aliases":  ["goofing", "newboots", "newbootgoofin"],
+            "help":     "Genuine ostrich. Three payments.",
+            "path":     "new-boot-goofin.mp3"
+        },
+        {
+            "name":     "thatsmypurse",
+            "aliases":  ["mypurse", "idontknowyou"],
+            "help":     "Don't be afraid to shout it.",
+            "path":     "thats-my-purse.mp3"
+        },
+        {
+            "name":     "bustin",
+            "aliases":  ["busting", "ghostbusters"],
+            "help":     "It makes me feel good.",
+            "path":     "bustin.mp3"
+        },
+        {
+            "name":     "ree",
+            "aliases":  ["re", "reee", "reeee", "reeeee"],
+            "help":     "Those gosh dang normies.",
+            "path":     "reee.mp3"
+        },
+        {
+            "name":     "themoreyouknow",
+            "aliases":  ["tmyk", "psa"],
+            "help":     "This is a public service announcement.",
+            "path":     "the-more-you-know.mp3"
+        },
+        {
+            "name":     "thatboyaintright",
+            "aliases":  ["aintright"],
+            "help":     "It's toilet sounds! I got it at the mall.",
+            "path":     "that-boy-aint-right.mp3"
+        },
+        {
+            "name":     "memes",
+            "help":     "You will NEVER forget these.",
+            "path":     "memes-you-will-never-forget.mp3"
+        },
+        {
+            "name":     "lying",
+            "aliases":  ["lyin", "whyyoualwayslying", "stoplying", "stoplyin"],
+            "help":     "Why you always lying?",
+            "path":     "why-you-always-lying.mp3"
+        },
+        {
+            "name":     "yeahboy",
+            "help":     "My longest ever!",
+            "path":     "yeah-boy.mp3"
+        },
+        {
+            "name":     "jellybeans",
+            "help":     "To make a long story short...",
+            "path":     "an-entire-bag-of-jelly-beans.mp3"
+        },
+        {
+            "name":     "freaky",
+            "help":     "This is four quarters.",
+            "path":     "this-is-four-quarters.mp3"
+        },
+        {
+            "name":     "stopit",
+            "help":     "A message from Michael Jordan.",
+            "path":     "stop-it-get-some-help.mp3"
         }
     ]
 }
