--- a/config.json
+++ b/config.json
@@ -1,22 +1,24 @@
 {
-    "version"                       : "0.1.0",
-    "admins"                        : ["Username#1234"],
-    "activation_string"             : "=",
-    "description"                   : "A soundboard bot for Discord. Contribute or star me at https://github.com/naschorr/clipster",
-    "channel_timeout"               : 900,
-    "channel_timeout_clip_paths"    : ["clips/movies/ill-be-back.mp3"],
-    "skip_votes"                    : 3,
-    "skip_percentage"               : 33,
+    "version"                               : "0.2.0",
+    "admins"                                : ["Username#1234"],
+    "activation_string"                     : "[[",
+    "description"                           : "A soundboard bot for Discord. Contribute or star me at https://github.com/naschorr/clipster",
+    "channel_timeout"                       : 900,
+    "channel_timeout_clip_paths"            : ["clips/movies/ill-be-back.mp3"],
+    "skip_votes"                            : 3,
+    "skip_percentage"                       : 33,
 
-    "debug_level"                   : 4,
-    "token_file_path"               : "token.json",
-    "clips_folder_path"             : "clips",
-    "ffmpeg_parameters"             : "-ac 2",
-    "ffmpeg_post_parameters"        : "-loglevel 16",
+    "debug_level"                           : 2,
+    "token_file_path"                       : "token.json",
+    "clips_folder_path"                     : "clips",
+    "ffmpeg_parameters"                     : "-ac 2",
+    "ffmpeg_post_parameters"                : "-loglevel 16",
+    "string_similarity_algorithm"           : "difflib",
+    "invalid_command_minimum_similarity"    : "0.66",
 
-    "boto_enable"                   : false,
-    "boto_resource"                 : "dynamodb",
-    "boto_region_name"              : "us-east-2",
-    "boto_table_name"               : "Clipster",
-    "boto_primary_key"              : "QueryId"
+    "boto_enable"                           : false,
+    "boto_resource"                         : "dynamodb",
+    "boto_region_name"                      : "us-east-2",
+    "boto_table_name"                       : "Clipster",
+    "boto_primary_key"                      : "QueryId"
 }
