--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "version"                               : "0.2.0",
+    "version"                               : "0.2.1",
     "admins"                                : ["Username#1234"],
-    "activation_string"                     : "[[",
+    "activation_string"                     : "=",
     "description"                           : "A soundboard bot for Discord. Contribute or star me at https://github.com/naschorr/clipster",
     "channel_timeout"                       : 900,
     "channel_timeout_clip_paths"            : ["clips/movies/ill-be-back.mp3"],
