--- a/clips/internet/manifest.json
+++ b/clips/internet/manifest.json
@@ -16,12 +16,6 @@
             "path":         "anime.mp3"
         },
         {
-            "name":         "curb",
-            "description":  "curb your enthusiasm theme song larry david",
-            "help":         "Oh geez there Larry.",
-            "path":         "curb-your-enthusiasm.mp3"
-        },
-        {
             "name":         "kermit",
             "description":  "im going to kermit suicide no",
             "help":         "RIP little green friend.",
@@ -34,28 +28,10 @@
             "path":         "deja-vu.mp3"
         },
         {
-            "name":         "didimissit",
-            "description":  "did i miss it",
-            "help":         "It's all over now.",
-            "path":         "did-i-miss-it.mp3"
-        },
-        {
-            "name":         "favre",
-            "description":  "so dont wait help brett favre and the boys kick some alien butt",
-            "help":         "They're gonna kick some alien butt!",
-            "path":         "help-brett-favre.mp3"
-        },
-        {
             "name":         "chillfully",
             "description":  "well its its going chillfully thus far",
             "help":         "It's going well.",
             "path":         "its-going-chillfully.mp3"
-        },
-        {
-            "name":         "people",
-            "description":  "people like coldplay and voted for the nazis you cant trust people",
-            "help":         "Can't trust 'em.",
-            "path":         "people.mp3"
         },
         {
             "name":         "no",
@@ -82,18 +58,6 @@
             "path":         "oh-shit-im-okay.mp3"
         },
         {
-            "name":         "goofin",
-            "description":  "im just goofing new boot goofin oh",
-            "help":         "Genuine ostrich. Three payments.",
-            "path":         "new-boot-goofin.mp3"
-        },
-        {
-            "name":         "thatsmypurse",
-            "description":  "thats my purse i dont know you",
-            "help":         "Don't be afraid to shout it.",
-            "path":         "thats-my-purse.mp3"
-        },
-        {
             "name":         "bustin",
             "description":  "bustin bustin busin makes me feel good",
             "help":         "It makes me feel good.",
@@ -112,18 +76,6 @@
             "path":         "the-more-you-know.mp3"
         },
         {
-            "name":         "thatboyaintright",
-            "description":  "that boy aint right",
-            "help":         "It's toilet sounds! I got it at the mall.",
-            "path":         "that-boy-aint-right.mp3"
-        },
-        {
-            "name":         "memes",
-            "description":  "theres a hierarchy of memes theres some that are memorable for a while and then you forget them and then there are some that are way more memorable then right at the top there are memes that you will never forget",
-            "help":         "You will NEVER forget these.",
-            "path":         "memes-you-will-never-forget.mp3"
-        },
-        {
             "name":         "lying",
             "description":  "why the fuck you lyin why you always lying hmm oh my god stop fuckin lyin",
             "help":         "Why you always lying?",
@@ -136,22 +88,106 @@
             "path":         "yeah-boy.mp3"
         },
         {
-            "name":         "jellybeans",
-            "description":  "to make a whole fuckin long story short i put a whole bag of jelly beans up my ass",
-            "help":         "To make a long story short...",
-            "path":         "an-entire-bag-of-jelly-beans.mp3"
-        },
-        {
-            "name":         "freaky",
-            "description":  "this is four quarters of unadulterated freaky shit motha fucker",
-            "help":         "This is four quarters.",
-            "path":         "this-is-four-quarters.mp3"
-        },
-        {
             "name":         "stopit",
             "description":  "stop it get some help michael jordan",
             "help":         "A message from Michael Jordan.",
             "path":         "stop-it-get-some-help.mp3"
+        },
+        {
+            "name":         "failed",
+            "description":  "call of duty cod mission failed well get them next time",
+            "help":         "Mission failed.",
+            "path":         "mission-failed.mp3"
+        },
+        {
+            "name":         "realestate",
+            "description":  "its free real estate tim and eric",
+            "help":         "It's a free house for ya, Jim!",
+            "path":         "free-real-estate.mp3"
+        },
+        {
+            "name":         "insubordinate",
+            "description":  "insubordinate and churlish key and peele aaron substitute teacher",
+            "help":         "Ya done messed up A-a-ron!",
+            "path":         "insubordinate-and-churlish.mp3"
+        },
+        {
+            "name":         "lemons",
+            "description":  "its a whore stealing our lemons",
+            "help":         "Key lemon pie.",
+            "path":         "lemon-stealing.mp3"
+        },
+        {
+            "name":         "yakety",
+            "description":  "yakety sax benny hill theme",
+            "help":         "Yakety sax!",
+            "path":         "yakety-sax.mp3"
+        },
+        {
+            "name":         "lifealert",
+            "description":  "help ive fallen and i cant get up",
+            "help":         "I've fallen, and I can't get up!",
+            "path":         "life-alert.mp3"
+        },
+        {
+            "name":         "lies",
+            "description":  "you really think someone would do that just go on the internet and tell lies",
+            "help":         "...just go on the internet and tell lies?",
+            "path":         "arthur-tell-lies.mp3"
+        },
+        {
+            "name":         "wrong",
+            "description":  "wrong trump",
+            "help":         "Wrong.",
+            "path":         "wrong.mp3"
+        },
+        {
+            "name":         "novictory",
+            "description":  "we dont have victories anymore trump",
+            "help":         "We don't have victories anymore.",
+            "path":         "we-dont-have-victories.mp3"
+        },
+        {
+            "name":         "incompetent",
+            "description":  "i happen to think that theyre incompetent trump",
+            "help":         "I think they're incompetent!",
+            "path":         "theyre-incompetent.mp3"
+        },
+        {
+            "name":         "verylong",
+            "description":  "very long and very hard trump",
+            "help":         "Very long, and very hard...",
+            "path":         "very-long-very-hard.mp3"
+        },
+        {
+            "name":         "ytmnd",
+            "description":  "your the man now dog ytmnd",
+            "help":         "You're the man now, dog!",
+            "path":         "ytmnd.mp3"
+        },
+        {
+            "name":         "profanity",
+            "description":  "watch your profanity",
+            "help":         "Watch yo profamity!",
+            "path":         "watch-yo-profanity.mp3"
+        },
+        {
+            "name":         "hentai",
+            "description":  "its called hentai and its art",
+            "help":         "Ah, I see you're a man of culture",
+            "path":         "hentai.mp3"
+        },
+        {
+            "name":         "grapefruit",
+            "description":  "grapefruit technique",
+            "help":         "You can burn fat, too!",
+            "path":         "grapefruit-technique.mp3"
+        },
+        {
+            "name":         "evil",
+            "description":  "even now the evil seed of what youve done germinates within you",
+            "help":         "It germinates within you!",
+            "path":         "the-evil-seed.mp3"
         }
     ]
 }
