--- a/config.json
+++ b/config.json
@@ -8,7 +8,10 @@
     "skip_votes"                            : 3,
     "skip_percentage"                       : 33,
 
-    "debug_level"                           : 2,
+    "log_level"                             : "DEBUG",
+    "log_dir"                               : "logs",
+    "log_max_bytes"                         : 10485760,
+    "log_backup_count"                      : 10,
     "token_file_path"                       : "token.json",
     "clips_folder_path"                     : "clips",
     "ffmpeg_parameters"                     : "-ac 2",
