Initial implementation of the smarter configuration system used by Hawking
- Updated README to remove references to `token.json`, and added section for new `discord_token`
- Removed old placeholder token.json file
- Moved `os.environ = {}` declaration into utilities file
- Reworked init logic to get the token to pull from the config.json now
- Updated utilities.py to load from config.json < config.prod.json < config.dev.json
- Version bump!

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ share/
 # Ignore gitattributes
 .gitattributes
 
+# Ignore non-public config environment files
+config.dev.json
+config.prod.json
+
 # Ignore the pip-selfcheck
 pip-selfcheck.json
 
@@ -33,9 +37,6 @@ pip-selfcheck.json
 
 # Ignore venv files
 pyvenv.cfg
-
-# Ignore the token
-token.json
 
 # Ignore supplemental clips, but keep some sensible defaults
 clips/*
