--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
     "bot_invite_blurb"                      : "A soundboard bot for Discord!\nAdd Clipster to your server and start playing clips now!",
     "support_discord_invite_url"            : "https://discord.gg/JJqx8C4",
     "privacy_policy_url"                    : "https://github.com/naschorr/clipster/blob/master/docs/privacy_policy.md",
-    "accent_color_hex"                      : "ff9c00",
+    "accent_color_hex"                      : "009f5d",
 
     "log_level"                             : "DEBUG",
     "log_path"                              : "",
